--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+* {
+    margin: 0;
+    padding: 0;
+    margin:auto;
+}
+body{
+    height: 100vh;
+} 
